--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.6.11",
+    "@heroui/react": "^2.6.13",
     "framer-motion": "^11.18.0",
     "next": "15.1.4",
     "react": "^19.0.0",
