--- a/package.json
+++ b/package.json
@@ -12,18 +12,32 @@
     "@heroui/react": "^2.6.13",
     "@hookform/resolvers": "^3.10.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tiptap/extension-bullet-list": "^2.11.2",
+    "@tiptap/extension-color": "^2.11.3",
+    "@tiptap/extension-highlight": "^2.11.3",
+    "@tiptap/extension-list-item": "^2.11.3",
+    "@tiptap/extension-text-align": "^2.11.3",
+    "@tiptap/extension-text-style": "^2.11.3",
+    "@tiptap/pm": "^2.11.2",
+    "@tiptap/react": "^2.11.2",
+    "@tiptap/starter-kit": "^2.11.2",
+    "dom-to-image": "^2.6.0",
     "framer-motion": "^11.18.0",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.473.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
+    "sass": "^1.83.4",
     "sonner": "^1.7.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/dom-to-image": "^2.6.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
