--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
+    "date-fns": "^4.1.0",
     "dom-to-image": "^2.6.0",
     "framer-motion": "^11.18.0",
     "jspdf": "^2.5.2",
