--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "framer-motion": "^11.18.0",
     "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
-    "lucide-react": "^0.473.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "sass": "^1.83.4",
     "sonner": "^1.7.2",
