--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "sass": "^1.83.4",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.2",
     "zod": "^3.24.1"
   },
