--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.83.4",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.2",
