--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
     "@heroui/react": "^2.6.13",
     "@hookform/resolvers": "^3.10.0",
     "@reduxjs/toolkit": "^2.5.0",
     "date-fns": "^4.1.0",
     "dom-to-image": "^2.6.0",
+    "emoji-picker-react": "^4.12.2",
     "framer-motion": "^11.18.0",
     "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
@@ -22,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-media-recorder": "^1.7.1",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.83.4",
